--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-gymnasium = "^0.29.1"
+python = "^3.10"
+gymnasium = {extras = ["classic-control"], version = "^1.2.2"}
 numpy = "^1.26.4"
 
 [tool.poetry.group.dev.dependencies]
